--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: Build 
 
 on: [push]
 
@@ -15,4 +15,5 @@ jobs:
         dotnet-version: 3.1.101
     - name: Build with dotnet
       working-directory: ./LoneBackup.App
-      run: dotnet publish -r linux-x64 -c Release /p:PublishSingleFile=true /p:PublishTrimmed=true 
+#      run: dotnet publish -r linux-x64 -c Release /p:PublishSingleFile=true /p:PublishTrimmed=true 
+      run: dotnet build
