--- a/.github/workflows/uploadrelease.yml
+++ b/.github/workflows/uploadrelease.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           dotnet-version: 3.1.101
           
-      - name: Build with dotnet
+      - name: Publish a linux executable
         working-directory: ./LoneBackup.App
         run: dotnet publish -r linux-x64 -c Release /p:PublishSingleFile=true /p:PublishTrimmed=true
         
