--- a/LoneBackup.App/LoneBackup.App.csproj
+++ b/LoneBackup.App/LoneBackup.App.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         
         <PublishReadyToRun>false</PublishReadyToRun>
 <!--        <PublishReadyToRunShowWarnings>true</PublishReadyToRunShowWarnings>-->
@@ -15,7 +15,7 @@
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.5.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
-        <PackageReference Include="MySqlBackup.NET" Version="2.3.1" />
+        <PackageReference Include="MySqlBackup.NET" Version="2.3.8" />
         <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
         <PackageReference Include="System.Security.Permissions" Version="4.7.0" />
     </ItemGroup>
