--- a/LoneBackup.App/LoneBackup.App.csproj
+++ b/LoneBackup.App/LoneBackup.App.csproj
@@ -11,11 +11,12 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Azure.Storage.Blobs" Version="12.2.0" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.5.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
-        <PackageReference Include="MySqlBackup.NET" Version="2.3.8" />
+        <PackageReference Include="MySqlBackup.NET.MySqlConnector" Version="2.3.8" />
+        <PackageReference Include="MySqlConnector.Logging.Microsoft.Extensions.Logging" Version="2.1.0" />
         <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
         <PackageReference Include="System.Security.Permissions" Version="4.7.0" />
     </ItemGroup>
