--- a/LoneBackup.App/LoneBackup.App.csproj
+++ b/LoneBackup.App/LoneBackup.App.csproj
@@ -2,31 +2,37 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
-        
-        <PublishReadyToRun>false</PublishReadyToRun>
-<!--        <PublishReadyToRunShowWarnings>true</PublishReadyToRunShowWarnings>-->
-        <!--        <PublishSingleFile>true</PublishSingleFile>-->
-<!--        <PublishTrimmed>True</PublishTrimmed>-->
+        <TargetFramework>net8.0</TargetFramework>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <Version>0.0.7</Version>
+        <FileVersion>0.0.7</FileVersion>
+        <InformationalVersion>0.0.7</InformationalVersion>
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Azure.Storage.Blobs" Version="12.13.0" />
-        <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.5.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
+        <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
+        <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="MySqlBackup.NET.MySqlConnector" Version="2.3.8" />
         <PackageReference Include="MySqlConnector.Logging.Microsoft.Extensions.Logging" Version="2.1.0" />
         <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
-        <PackageReference Include="System.Security.Permissions" Version="4.7.0" />
+        <PackageReference Include="System.Security.Permissions" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
         <Content Include="config.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
-        <Content Include="config.local.json" Condition="Exists('config.local.json')">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <None Include="config.local.json" Condition="Exists('config.local.json')" />
+        <None Remove="config.local.json" />
+        <Content Include="config.local.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
