--- a/LoneBackup.App/LoneBackup.App.csproj
+++ b/LoneBackup.App/LoneBackup.App.csproj
@@ -6,9 +6,13 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <Version>0.0.7</Version>
-        <FileVersion>0.0.7</FileVersion>
-        <InformationalVersion>0.0.7</InformationalVersion>
+        <Version>1.0.0</Version>
+        <FileVersion>1.0.0</FileVersion>
+        <InformationalVersion>1.0.0</InformationalVersion>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <InvariantGlobalization>true</InvariantGlobalization>
     </PropertyGroup>
     
     <ItemGroup>
