--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,7 +12,8 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1      
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 8.0.*
+        
     - name: Build with dotnet
       working-directory: ./LoneBackup.App
       run: dotnet build
