--- a/.github/workflows/uploadrelease.yml
+++ b/.github/workflows/uploadrelease.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.101
+          dotnet-version: 8.0.*
           
       - name: Publish a linux executable
-        working-directory: ./LoneBackup.App
-        run: dotnet publish -r linux-x64 -c Release /p:PublishSingleFile=true /p:PublishTrimmed=true
+#        working-directory: ./LoneBackup.App
+        run: ./publish-linux.sh
         
       - name: Create Release
         id: create_release
@@ -31,7 +31,7 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          draft: false
+          draft: true
           prerelease: false
           
       - name: Upload Release Asset
@@ -41,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./LoneBackup.App/bin/Release/netcoreapp3.1/linux-x64/publish/LoneBackup.App
+          asset_path: ./LoneBackup.App/publish/lonebackup-x64
           asset_name: lonebackup-x64
           asset_content_type: application/x-elf
