--- a/LoneBackup.App/LoneBackup.App.csproj
+++ b/LoneBackup.App/LoneBackup.App.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
+        <PublishAot>true</PublishAot>
+        <IsAotCompatible>true</IsAotCompatible>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -17,12 +19,12 @@
     
     <ItemGroup>
         <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
-        <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="MySqlBackup.NET.MySqlConnector" Version="2.3.8" />
         <PackageReference Include="MySqlConnector.Logging.Microsoft.Extensions.Logging" Version="2.1.0" />
         <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
         <PackageReference Include="System.Security.Permissions" Version="8.0.0" />
     </ItemGroup>
 
@@ -31,6 +33,13 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <None Include="config.local.json" Condition="Exists('config.local.json')" />
+        <None Update="config.local.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Deploy\" />
     </ItemGroup>
 
 </Project>
