--- a/LoneBackup.App/LoneBackup.App.csproj
+++ b/LoneBackup.App/LoneBackup.App.csproj
@@ -23,7 +23,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="MySqlBackup.NET.MySqlConnector" Version="2.3.8" />
         <PackageReference Include="MySqlConnector.Logging.Microsoft.Extensions.Logging" Version="2.1.0" />
-        <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
+        <PackageReference Include="SharpZipLib" Version="1.4.2" />
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
         <PackageReference Include="System.Security.Permissions" Version="8.0.0" />
     </ItemGroup>
