Dump DB directly to Zip stream.

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,4 +22,7 @@ jobs:
         run: dotnet build
 
       - name: Create linux executable
-        run: ./publish-linux.sh
+        run: |
+          chmod +x ./publish-linux.sh
+          ./publish-linux.sh
+        shell: bash
