--- a/.github/workflows/uploadrelease.yml
+++ b/.github/workflows/uploadrelease.yml
@@ -20,9 +20,11 @@ jobs:
         with:
           dotnet-version: 8.0.*
           
-      - name: Publish a linux executable
-#        working-directory: ./LoneBackup.App
-        run: ./publish-linux.sh
+      - name: Create linux executable
+        run: |
+          chmod +x ./publish-linux.sh
+          ./publish-linux.sh
+        shell: bash
         
       - name: Create Release
         id: create_release
