Allow deleting old archives

--- a/LoneBackup.App/config.json
+++ b/LoneBackup.App/config.json
@@ -3,6 +3,9 @@
   "AzureStorageContainer": "container",
   "AzureStorageFolder": "folder",
   "ArchivePassword": "abcd",
+  "Storage": {
+    "DeleteOlderThanDays": 31
+  },
   "MySQL": {
     "Host": "localhost",
     "Port": 3306,
